--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>site sergio moral</title>
 </head>
 <body>
-    <img src="" alt="">
+    <img src="C:\xampp\htdocs\sergiomoral\img\1.jpeg">
 
 
 
