site com imagem
segunda imagem

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="C:\xampp\htdocs\sergiomoral\img\1.jpeg">
+    <img src="C:\xampp\htdocs\sergiomoral\img\2.jpeg">
 
 
 
