--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="C:\xampp\htdocs\sergiomoral\img\download.jpeg">
-    <img src="C:\xampp\htdocs\sergiomoral\img\escola.jpg">
+    <img src="img/1.jpeg">
+    <img src="img/2.jpeg">
 
 
 
